# pico2w-rust

./: Cargo.toml  README.md  memory.x  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: build.yml
src/: main.rs
