[package]
name = "pico2w-rush"
version = "0.1.0"
edition = "2024"
description = "Rust firmware for Raspberry Pi Pico 2 W using Embassy and CYW43439 WiFi"
authors = ["Zachary Tam <you@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/zacharytam/pico2w-rush"

[dependencies]
# === Embassy crates from GitHub ===
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-net = { git = "https://github.com/embassy-rs/embassy.git", branch = "main" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy.git", branch = "main", features = ["_rp235x"] }

# === CYW43 Wi-Fi / Bluetooth ===
cyw43 = { git = "https://github.com/embassy-rs/embassy.git", branch = "main", package = "cyw43" }

# === Embedded / HAL ===
cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embedded-hal = "1.0.0"
embedded-nal = "0.9.0"
embedded-nal-async = "0.8.0"
heapless = "0.8"
panic-probe = "1.0.0"

# === Futures (no_std) ===
futures = { version = "0.3", default-features = false, features = ["alloc"] }

# === Optional logging / debugging ===
defmt = { version = "1.0.1", optional = true }
defmt-rtt = { version = "1.1.0", optional = true }

[features]
# Default feature enables defmt logging
default = ["defmt"]

# Optional features
defmt = ["defmt", "defmt-rtt"]
bluetooth = ["cyw43/bluetooth"]

[build-dependencies]
# None for now
